@@ -1,7 +1,6 @@
 [Project]
 name: "liblnk"
 status: "alpha"
-description: "a library to access the Windows Shortcut File (LNK) format"
 features: [
     "debug_output", "tests", "tools", "python",
     "source_package",
@@ -13,6 +12,10 @@ url: "https://googledrive.com/host/0B3fBvzttpiiSQmluVC1YeDVvZWM/"
 
 [git]
 url: "https://github.com/libyal/liblnk.git"
+
+[development]
+main_object: "file"
+main_object_filename: "calc.lnk"
 
 [tests]
 features: ["profiles", "valgrind"]
