@@ -31,7 +31,7 @@ DUALCASE=1; export DUALCASE # for MKS sh
 # if CDPATH is set.
 (unset CDPATH) >/dev/null 2>&1 && unset CDPATH
 
-relink_command="(cd /home/lordyesta/Projects/liblnk/lnktools; { test -z \"\${LIBRARY_PATH+set}\" || unset LIBRARY_PATH || { LIBRARY_PATH=; export LIBRARY_PATH; }; }; { test -z \"\${COMPILER_PATH+set}\" || unset COMPILER_PATH || { COMPILER_PATH=; export COMPILER_PATH; }; }; { test -z \"\${GCC_EXEC_PREFIX+set}\" || unset GCC_EXEC_PREFIX || { GCC_EXEC_PREFIX=; export GCC_EXEC_PREFIX; }; }; { test -z \"\${LD_RUN_PATH+set}\" || unset LD_RUN_PATH || { LD_RUN_PATH=; export LD_RUN_PATH; }; }; { test -z \"\${LD_LIBRARY_PATH+set}\" || unset LD_LIBRARY_PATH || { LD_LIBRARY_PATH=; export LD_LIBRARY_PATH; }; }; PATH=/usr/lib64/qt-3.3/bin:/usr/lib64/ccache:/usr/local/bin:/usr/bin:/bin:/usr/local/sbin:/usr/sbin:/home/lordyesta/.local/bin:/home/lordyesta/bin; export PATH; gcc -g -O2 -Wall -o \$progdir/\$file info_handle.o lnkinfo.o lnkoutput.o shell_items.o  ../libcsystem/.libs/libcsystem.a ../libfwsi/.libs/libfwsi.a ../libfwps/.libs/libfwps.a ../libfole/.libs/libfole.a ../libfguid/.libs/libfguid.a ../libfdatetime/.libs/libfdatetime.a ../libuna/.libs/libuna.a ../libcdata/.libs/libcdata.a ../liblnk/.libs/liblnk.so -lpthread ../libcnotify/.libs/libcnotify.a ../libclocale/.libs/libclocale.a ../libcerror/.libs/libcerror.a ../libcstring/.libs/libcstring.a -Wl,-rpath -Wl,/home/lordyesta/Projects/liblnk/liblnk/.libs -Wl,-rpath -Wl,/usr/local/lib)"
+relink_command="(cd /home/lordyesta/Projects/liblnk/lnktools; { test -z \"\${LIBRARY_PATH+set}\" || unset LIBRARY_PATH || { LIBRARY_PATH=; export LIBRARY_PATH; }; }; { test -z \"\${COMPILER_PATH+set}\" || unset COMPILER_PATH || { COMPILER_PATH=; export COMPILER_PATH; }; }; { test -z \"\${GCC_EXEC_PREFIX+set}\" || unset GCC_EXEC_PREFIX || { GCC_EXEC_PREFIX=; export GCC_EXEC_PREFIX; }; }; { test -z \"\${LD_RUN_PATH+set}\" || unset LD_RUN_PATH || { LD_RUN_PATH=; export LD_RUN_PATH; }; }; { test -z \"\${LD_LIBRARY_PATH+set}\" || unset LD_LIBRARY_PATH || { LD_LIBRARY_PATH=; export LD_LIBRARY_PATH; }; }; PATH=/usr/lib64/qt-3.3/bin:/usr/lib64/ccache:/usr/local/bin:/usr/bin:/bin:/usr/local/sbin:/usr/sbin:/home/lordyesta/.local/bin:/home/lordyesta/bin; export PATH; gcc -g -O2 -Wall -o \$progdir/\$file info_handle.o lnkinfo.o lnkoutput.o shell_items.o  ../libcsystem/.libs/libcsystem.a ../libfwsi/.libs/libfwsi.a ../libfwps/.libs/libfwps.a ../libfole/.libs/libfole.a ../libfguid/.libs/libfguid.a ../libfdatetime/.libs/libfdatetime.a ../libuna/.libs/libuna.a ../libcdata/.libs/libcdata.a ../liblnk/.libs/liblnk.so -lpthread ../libcnotify/.libs/libcnotify.a ../libclocale/.libs/libclocale.a ../libcerror/.libs/libcerror.a ../libcstring/.libs/libcstring.a -Wl,-rpath -Wl,/home/lordyesta/Projects/liblnk/liblnk/.libs)"
 
 # This environment variable determines our operation mode.
 if test "$libtool_install_magic" = "%%%MAGIC variable%%%"; then
